--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -15,7 +15,4 @@
  * @lastmodified	$Date$
  */
 
-@import url("reset.css");
-@import url("screen.css");
-@import url("typography.css");
-@import url("grid.css");
+@import url("blueprint/screen.css");
