git-svn-id: http://svn.blueatlas.com/repos/blueplate/trunk@16 1b612556-4205-11dd-95e7-d3cce41f8d93

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -15,3 +15,11 @@
  */
 
 @import url("blueprint/screen.css");
+
+/* CONTAINER 
+===================================================== */
+#container{background:#000;}
+
+/* HEADER 
+===================================================== */
+#header{width:100%;}
