Enhancing base index layout.  Fixed JS errors.
git-svn-id: http://svn.blueatlas.com/repos/blueplate/trunk@18 1b612556-4205-11dd-95e7-d3cce41f8d93

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -16,10 +16,34 @@
 
 @import url("blueprint/screen.css");
 
+body {
+   text-align: center;
+}
+
 /* CONTAINER 
 ===================================================== */
-#container{background:#000;}
+div.container {
+   text-align: left;
+   margin-left: auto;
+   margin-right: auto
+}
 
 /* HEADER 
 ===================================================== */
-#header{width:100%;}
+#header {}
+
+/* META
+===================================================== */
+#meta {
+   text-align: right
+}
+
+/* NAV 
+===================================================== */
+#nav li {
+   display: inline;
+}
+
+/* FOOTER 
+===================================================== */
+#footer {}
