Moved files to s3 storage.  Updated js to pull from Google CDN.  etc
git-svn-id: http://svn.blueatlas.com/repos/blueplate/trunk@20 1b612556-4205-11dd-95e7-d3cce41f8d93

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -14,7 +14,11 @@
  * @lastmodified	$Date$
  */
 
-@import url("blueprint/screen.css");
+/*
+ * in the event that you need to modify screen.css, you should use the local version of screen.css
+ * located in css/blueprint_x.x.x
+ */
+@import url("http://blueplate.s3.amazonaws.com/css/blueprint_0.7.1/screen.css");
 
 body {
    text-align: center;
