git-svn-id: http://svn.blueatlas.com/repos/blueplate/trunk@30 1b612556-4205-11dd-95e7-d3cce41f8d93

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -30,6 +30,9 @@ body{color:#222;background:#fff}p img{float:left;margin:1.5em 1.5em 1.5em 0;padd
    display: inline;
 }
 
+/*_BODY*/
+#bd {}
+
 /*_FOOTER*/
 #footer {}
 
