--- a/yui-full/assets/css/base.css
+++ b/yui-full/assets/css/base.css
@@ -1,27 +1,211 @@
-/*_HEADER*/
-#hd {}
+/**
+ * NOTES: 
+ * Sections such as the default styling section are demarcated with 
+ * selectors such as #__DEFAULT_STYLING__.  This is useful in the event
+ * that your editor has an CSS outline view.
+ */
 
-/*_META*/
+/* 1. Body */
+#__1_BODY__{}
+
+body {
+    color: #222;
+    background: #fff
+}
+
+
+/* 2. Default Styling */
+#__2_DEFAULT_STYLING__{}
+
 #meta {
    text-align: right;
    padding: 1em
 }
 
-/*_LOGO*/
-#logo {}
+p img.left {
+    float: left;
+    margin: 1.5em 1.5em 1.5em 0;
+    padding: 0
+}
 
-/*_NAV*/
+p img.right {
+    float: right;
+    margin: 1.5em 0 1.5em 1.5em
+}
+
+blockquote {
+    margin: 1.5em;
+    color: #666;
+    font-style: italic
+}
+
+strong {
+    font-weight: bold
+}
+
+dfn {
+    font-style: italic;
+    font-weight: bold
+}
+
+sup, sub {
+    line-height: 0
+}
+
+abbr, acronym {
+    border-bottom: 1px dotted #666
+}
+
+address {
+    margin: 0 0 1.5em;
+    font-style: italic
+}
+
+del {
+    color: #666
+}
+
+pre, code {
+    margin: 1.5em 0;
+    white-space: pre
+}
+
+    /* 2-1 Default Table Styles */
+    #__2-1_DEFAULT_TABLE_STYLES__{}
+
+    table {
+        margin-bottom: 1.4em;
+        width: 100%
+    }
+    
+    th {
+        font-weight: bold;
+        background: #C3D9FF
+    }
+    
+    th, td {
+        padding: 4px 10px 4px 5px
+    }
+    
+    tr.even td {
+        background: #E5ECF9
+    }
+    
+    tfoot {
+        font-style: italic
+    }
+    
+    /* 2-2 Default Form Styles */
+    #__2-2_DEFAULT_FORM_STYLES__{}
+
+    caption {
+        background: #eee
+    }
+    
+    label {
+        font-weight: bold
+    }
+    
+    fieldset {
+        padding: 1.4em;
+        margin: 0 0 1.5em 0;
+        border: 1px solid #ccc
+    }
+    
+    legend {
+        font-weight: bold;
+        font-size: 1.2em
+    }
+    
+    input.text, 
+    input.title, 
+    textarea, 
+    select {
+        margin: 0.5em 0;
+        border: 1px solid #bbb
+    }
+    
+    input.text:focus, 
+    input.title:focus, 
+    textarea:focus, 
+    select:focus {
+        border: 1px solid #666
+    }
+    
+    input.text, 
+    input.title {
+        width: 300px;
+        padding: 5px
+    }
+    
+    input.title {
+        font-size: 1.5em
+    }
+    
+    textarea {
+        width: 390px;
+        height: 250px;
+        padding: 5px
+    }
+
+/* 3. Headings */
+#__3_HEADINGS__{}
+
+
+/* 4. Links */
+#__4_LINKS__{}
+
+a:focus, a:hover {
+    color: #000
+}
+
+a {
+    color: #009;
+    text-decoration: underline
+}
+
+/* 5. Layout */
+#__5_LAYOUT__{}
+
+#bd {
+    
+}
+
+#hd {
+    
+}
+
+
+/* 6. Branding/Masthead */
+#__6_LOGO_BRANDING_MASTHEAD__{}
+
+#logo {
+    
+}
+
+
+/* 7. Navigation */
+#__7_NAVIGATION__{}
+
 #nav li {
    display: inline;
 }
 
-/*_BODY*/
-#bd {}
 
-/*_FOOTER*/
-#ft {}
+/* 8. Site Info / Footer */
+#__8_SITEINFO_FOOTER__{}
 
-/*_CUSTOM*/
+#ft {
+    
+}
+
+
+/* 9. Sitewide Elements */
+#__9_SITEWIDE_ELEMENTS__{}
+
+
+/* 10. Generic Styles */
+#__10_GENERIC_STYLES__ {}
 .clear{clear:both;}
 .error, .notice, .success, .highlight{padding:.8em;margin-bottom:1em;border:2px solid #ddd;}
 .error {background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4;}
@@ -36,3 +220,4 @@
 .quiet {color:#666;}
 .loud {color:#000;}
 .highlight {background:#ff0; border:0;}
+.pad{padding: 0}
